CSA-1117 As an end-user I need to be able to play audio file upon page preview :: works same as video; same tweak to css needed to prevent scrollbar from appearing [rev. matthew.gordon]

--- a/find-core/src/main/public/static/css/colorbox.css
+++ b/find-core/src/main/public/static/css/colorbox.css
@@ -48,6 +48,7 @@
     overflow: initial;
 }
 
+#cboxLoadedContent audio,
 #cboxLoadedContent video {
     display: block;
 }
